# smart-housing-market

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: production.yaml  staging.yaml
api/: Dockerfile  README.md  pyproject.toml  requirements.txt
api/src/: main.py
api/src/config/: __init__.py  environments.py
api/src/events/startup/: __init__.py  routes.py
api/src/routes/: __init__.py
api/src/routes/auth/: __init__.py  v1.py
api/src/schemas/: __init__.py
api/src/schemas/requests/: __init__.py
api/src/schemas/responses/: __init__.py
api/src/utils/: enums.py
client/: Dockerfile  README.md  package-lock.json  package.json
compose-templates/: development.yaml  production.yaml  staging.yaml
pipeline/: README.md  pyproject.toml
pipeline/src/: main.py
